# FEMeshVUE

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: Doxyfile.in
examples/: CMakeLists.txt  torus.cpp
femeshvue/: CMakeLists.txt  main.cpp  mesh.cpp
femeshvue/mesh/: CMakeLists.txt  mesh.cpp
scripts/: format_code.sh
utils/: shared_ptr.cpp  unique_ptr.cpp
